[build-system]
requires = ["maturin>=1.7.0,<2.0"]
build-backend = "maturin"

[project]
name = "midirenderer"
version = "0.1.0"
authors = [
    {name = "Arthur Ryzhak", email = "ryzhakar@gmail.com"},
]
description = "Render MIDI files into wave and opus formats using soundfonts."
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
features = ["pyo3/extension-module"]
